Add support for creating multiple resources to POST /resources endpoint
