# app/static/openapi.yaml
@@ -321,7 +321,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Language_data'
               example:
-                apiVersion : '1.0'
+                apiVersion: '1.0'
                 data:
                   id: 2
                   name: 'Python'
@@ -567,20 +567,20 @@ paths:
                 status_code: 422
 
     post:
-      summary: Create Resource
-      description: Creates a new learning resource entry. The required properties for a new entry are `category`, `name`, `paid`, and `url` and must be included in the request body.
+      summary: Create Resources
+      description: Creates new learning resources. The structure of the request is a list of resource objects. The required properties for each new resource are `category`, `name`, `paid`, and `url`.
       tags:
-        - Create Resource
+        - Create Resources
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateResourceRequest'
+              $ref: '#/components/schemas/CreateResourcesRequest'
             example:
-              category: 'Tutorial'
-              name: 'CSS Tutorial'
-              paid: false
-              url: 'https://www.w3schools.com/css/'
+              - category: 'Tutorial'
+                name: 'CSS Tutorial'
+                paid: false
+                url: 'https://www.w3schools.com/css/'
         required: true
       responses:
         200:
@@ -588,23 +588,23 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Resource'
+                $ref: '#/components/schemas/Resource_list'
               example:
                 apiVersion: '1.0'
                 data:
-                  category: 'Tutorial'
-                  created_at: '2019-07-21 15:41:19'
-                  downvotes: 0
-                  id: 2137
-                  languages:
-                    - 'CSS'
-                  last_updated: '2019-07-22 16:05:53'
-                  name: 'CSS Tutorial'
-                  notes: null
-                  paid: false
-                  times_clicked: 3
-                  upvotes: 1
-                  url: 'https://www.w3schools.com/css/'
+                  - category: 'Tutorial'
+                    created_at: '2019-07-21 15:41:19'
+                    downvotes: 0
+                    id: 2137
+                    languages:
+                      - 'CSS'
+                    last_updated: '2019-07-22 16:05:53'
+                    name: 'CSS Tutorial'
+                    notes: null
+                    paid: false
+                    times_clicked: 3
+                    upvotes: 1
+                    url: 'https://www.w3schools.com/css/'
                 status: 'ok'
                 status_code: 200
         400:
@@ -616,22 +616,23 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Error_list'
               example:
                   apiVersion: '1.0'
                   data: null
                   errors:
-                    invalid-params:
-                      - message: 'The following params were invalid: url. Resource id 2137 already has this URL.'
+                    - index: 0
+                      invalid-params:
+                        message: 'The following params were invalid: url. Resource id 2137 already has this URL.'
                         params:
                           - url
                         resource: 'https://resources.operationcode.org/api/v1/2137'
-                    missing-params:
-                        message: 'The following params were missing: name, category, paid.'
-                        params:
-                          - name
-                          - category
-                          - paid
+                      missing-params:
+                          message: 'The following params were missing: name, category, paid.'
+                          params:
+                            - name
+                            - category
+                            - paid
                   status: 'Unprocessable Entity'
                   status_code: 422
       security:
@@ -722,6 +723,93 @@ components:
             message:
               description: Error message
               type: string
+    Error_list:
+      type: object
+      properties:
+        apiVersion:
+          type: string
+          description: API version
+        data:
+          type: object
+          description: A data object
+        errors:
+          $ref: '#/components/schemas/Error_list_data'
+        status:
+          type: string
+          description: Status message
+        status_code:
+          type: integer
+          description: Status code
+
+    Error_list_data:
+      type: array
+      items:
+        type: object
+        properties:
+          index:
+            type: integer
+            description: The index of the invalid resource
+          missing-params:
+            type: object
+            properties:
+              params:
+                description: The associated parameters.
+                type: array
+                items:
+                  type: string
+              message:
+                description: Error message
+                type: string
+          invalid-params:
+            type: object
+            properties:
+              params:
+                description: The associated parameters.
+                type: array
+                items:
+                  type: string
+              message:
+                description: Error message
+                type: string
+              resource:
+                description: An href link to the resource with a duplicate url
+                type: string
+          invalid-credentials:
+            type: object
+            properties:
+              message:
+                description: Error message
+                type: string
+          unauthorized:
+            type: object
+            properties:
+              message:
+                description: Error message
+                type: string
+          missing-body:
+            type: object
+            properties:
+              message:
+                description: Error message
+                type: string
+          unprocessable-entity:
+            type: object
+            properties:
+              message:
+                description: Error message
+                type: string
+          bad-request:
+            type: object
+            properties:
+              message:
+                description: Error message
+                type: string
+          not-found:
+            type: object
+            properties:
+              message:
+                description: Error message
+                type: string
 
 
     Resource:
@@ -825,11 +913,36 @@ components:
           description: Language Name
 
 
-    CreateResourceRequest:
+    CreateResourcesRequest:
       allOf:
-        - $ref: '#/components/schemas/ResourceRequest'
-        - required: [category, name, paid, url]
+        - $ref: '#/components/schemas/ResourcesRequest'
+        # - required: [category, name, paid, url]
 
+    ResourcesRequest:
+      type: array
+      items:
+        type: object
+        properties:
+          category:
+            type: string
+            description: Category
+          languages:
+            type: array
+            description: List of languages
+            items:
+              type: string
+          name:
+            type: string
+            description: Resource name
+          notes:
+            type: string
+            description: Resource notes
+          paid:
+            type: boolean
+            description: True or false for whether resource is paid
+          url:
+            type: string
+            description: Resource url
     ResourceRequest:
       type: object
       properties:
@@ -894,6 +1007,11 @@ components:
         url:
           type: string
           description: Resource url
+
+    Resource_list:
+      type: array
+      items:
+        $ref: '#/components/schemas/Resource_data'
 
     SearchResponse:
       type: object
@@ -1032,6 +1150,7 @@ components:
             {
               'apiVersion': '1.0',
               'data': null,
+              'error': 1,
               'errors': {
                 'invalid-credentials': {
                   'message': 'The email or password you submitted is incorrect'
@@ -1084,7 +1203,7 @@ components:
 tags:
   - name: List Resources
   - name: Get Resource
-  - name: Create Resource
+  - name: Create Resources
   - name: Update Resource
   - name: List Categories
   - name: Get Category
@@ -1103,7 +1222,7 @@ x-tagGroups:
     tags:
       - List Resources
       - Get Resource
-      - Create Resource
+      - Create Resources
       - Update Resource
   - name: Categories
     tags:
